manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: review-it-dep

spec:
  replicas: 1
  selector:
    matchLabels:
      app: review-it
  template:
    metadata:
      labels:
        app: review-it
    spec:
      containers:
        - name: review-it
          image: registry.deti/wayly/review-it:v1.1.1
          ports:
            - containerPort: 8000
