manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: review-it-ingress

  annotations:
    traefik.ingress.kubernetes.io/frontend-entry-points: http,https
    traefik.ingress.kubernetes.io/redirect-entry-point: https
    traefik.ingress.kubernetes.io/redirect-permanent: "true"
spec:
  ingressClassName: your-traefik-ingressclass
  rules:
    - host: app-domain.com
      http:
        paths:
          - path: /review-it
            pathType: Prefix
            backend:
              service:
                name: review-it
                port:
                  number: 8000
